--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta name="description" content="Фан-проект посвященный японской певице Ado. Новости, дискография, информация о мировом туре 2025.">
+<meta name="keywords" content="Ado, певица Ado, Ado fan, J-pop, новости Ado, Hibana tour">
+<meta name="robots" content="index, follow">
     <style>
     .about-container {
         color: white; 
@@ -227,3 +230,4 @@
     </script>
 </body>
 </html>
+
